# mdl-launcher

./: CMakeLists.txt  README.md
launcher/: main.cpp
program_info/: CMakeLists.txt  com.mdl-launcher.mdl-launcher.desktop.in  com.mdl-launcher.mdl-launcher.metainfo.xml.in  genicons.sh  mdllauncher.qrc  mdllauncher.rc.in
tests/testdata/ResourceFolderModel/another_test_folder/: pack.mcmeta
